<resources>
    <string name="app_name">Mo Widgets</string>
    <string name="date_format_clock_never_settle">EE, MMM d</string>
    <string name="slogan_google_now">Say \"OK Google&#8230;\"</string>
    <string name="label_hydrogen_clock">Hydrogen Clock</string>
    <string name="label_never_settle">Never Settle</string>
    <string name="label_google_now">Google Now</string>
    <string name="label_google_word">Google Word</string>
    <string name="colon">:</string>
    <string name="title_google_word_settings">Google Word Settings</string>
    <string name="txt_confirm">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_color">颜色</string>
    <string name="color_prefix">#</string>
    <string name="please_input_valid_color">请输入正确的颜色值</string>
    <string name="default_google_word_color">#ffffff</string>
    <string name="label_coloros_clock">Coloros Clock</string>
    <string name="title_coloros_clock_settings">Coloros Clock Settings</string>
    <string name="txt_area">地区</string>
    <string name="please_input_valid_area">请输入有效地区</string>
    <string name="hint_et_location">西安市</string>
    <string name="hint_et_color">ffffffff</string>
    <string name="label_poco_clock">Poco Clock</string>
    <string name="date_format_poco_clock">EEEE, MMMM dd</string>
    <string name="date_format_coloros_clock">EEE \ \ MMM d</string>
    <string name="label_three_lines_word">Three Lines Word</string>
    <string name="title_three_lines_word">Three Lines Word Settings</string>
    <string name="please_input_at_least_one_line">请至少输入一行文字</string>
    <string name="default_word_line1">第一行</string>
    <string name="default_word_line2">第二行</string>
    <string name="default_word_line3">第三行</string>
    <string name="default_three_line_word_color">#ffffff</string>
    <string name="alignment_left">居左</string>
    <string name="alignment_middle">居中</string>
    <string name="alignment_right">居右</string>
    <string name="key_secret">ermiao</string>
    <string name="please_input_display_word">请输入显示文字</string>
    <string name="label_iuni_date">IUNI Date</string>
    <string name="label_q_text_clock">Q Text Clock</string>
    <string name="it_s">It’s</string>
    <string name="default_et_color">ffffffff</string>
    <string name="title_q_text_clock_settings">Q Text Clock Settings</string>
    <string name="default_color_q_text_it_s">#f9cc88</string>
    <string name="default_color_q_text_time">#ffffff</string>
    <string name="label_time_service">Mo控件时间服务</string>
    <string name="accessibily_desc_time_service">本服务仅用于提供稳定的时间更新服务，如出现自动关闭请将Mo控件加入系统白名单。</string>
    <string name="label_pixel_date_weather">Pixel Date Weather</string>
    <string name="title_pixel_date_weather_settings">Pixel Date Weather Settings</string>
    <string name="date_format_pixel_date">MMM d \ EEEE</string>
    <string name="label_paper_notes">Paper Notes</string>
    <string name="title_paper_notes_settings">Paper Notes Settings</string>
    <string name="label_art_sentence">Art Sentence</string>
    <string name="title_art_sentence_settings">Art Sentence Settings</string>
    <string name="selection1">选项一</string>
    <string name="selection2">选项二</string>
    <string name="title_iuni_date_settings">IUNI Date Settings</string>
    <string name="title_color_picker">请选择颜色</string>
    <string name="label_japanese_clock">Japanese Clock</string>
    <string name="title_japanese_clock_settings">Japanese Clock Settings</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="title_big_drum_clock_settings">Big Drum Clock Settings</string>
    <string name="label_big_drum_clock">Big Drum Clock</string>
    <string name="week_format_big_drum">EEEE</string>
    <string name="label_dog_picture">萌柴</string>
    <string name="label_drink_picture">凉饮</string>
    <string name="label_book_picture">书叶</string>
    <string name="label_custom_picture">自定义图片</string>
    <string name="title_custom_settings">自定义图片控件设置</string>
    <string name="label_weather_forecast">三日天气</string>
    <string name="title_weather_forecast_settings">天气预报设置</string>
    <string name="label_black_card_weather">VIP天气卡</string>
    <string name="title_black_card_weather_settings">VIP天气卡设置</string>
    <string name="label_month_calendar">Month Calendar</string>
    <string name="title_month_calendar_settings">Month Calendar Settings</string>
    <string name="files_not_found">未检索到文件</string>
    <string name="title_hydrogen_clock_settings">Hydrogen Clock Settings</string>
    <string name="title_poco_clock_settings">Poco Clock Settings</string>
    <string name="label_miui_aod">MIUI AOD Clock</string>
    <string name="title_miui_aod_clock_settings">MIUI AOD Clock Settings</string>
    <string name="text_clock_dictionary">ITLISASGTFIACQUARTERBSTWENTYFIVEXHALFBTENFTOPASTERUNINEONESIXTHREEFOURFIVETWOEIGHTELEVENSEVENTWELVETENSEOCLOCKMIDNIGHTERO</string>
    <string name="text_clock_dictionary_tgif">ITLISASTGIFACQUARTERBSTWENTYFIVEXHALFBTENFTOPASTERUNINEONESIXTHREEFOURFIVETWOEIGHTELEVENSEVENTWELVETENSEOCLOCKMIDNIGHTERO</string>
    <string name="label_text_clock">Text Clock</string>
    <string name="title_text_clock_settings">Text Clock Settings</string>
    <string name="label_rolling_gallery">Rolling Gallery</string>
    <string name="title_rolling_gallery_settings">Rolling Gallery Settings</string>
</resources>
