<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_three_lines_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="middle"
            android:textColor="@android:color/white"
            android:text="@string/default_word_line1"/>

        <TextView
            android:id="@+id/tv_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="middle"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/x26"
            android:text="@string/default_word_line2"/>

        <TextView
            android:id="@+id/tv_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="middle"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/x26"
            android:text="@string/default_word_line3"/>

    </LinearLayout>
</FrameLayout>
