<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLabel"
            android:textSize="@dimen/labelSize"
            android:layout_marginEnd="5dp"
            tools:text="对齐"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>


        <cn.ommiao.mowidgets.widgets.others.RadioTextView
            android:id="@+id/tv_align_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:checked="true"
            android:text="@string/alignment_left"/>

        <cn.ommiao.mowidgets.widgets.others.RadioTextView
            android:id="@+id/tv_align_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/alignment_middle"/>

        <cn.ommiao.mowidgets.widgets.others.RadioTextView
            android:id="@+id/tv_align_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/alignment_right"/>

    </LinearLayout>

</layout>